prl list phase 2

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -1205,7 +1205,8 @@ get_invoice_detail_for_prl = SELECT \
                                 t6.subscriberName, \
                                 t6.invoiceAddress, \
                                 t6.shippingAddress, \
-                                t6.subtype as subscriberType \
+                                t6.subtype as subscriberType, \
+                                t6.email \
                               FROM \
                                 invoice t1, \
                                 subscription t2, \
@@ -1735,7 +1736,8 @@ get_pl_refer_list_for_email_and_all = SELECT \
                                         t4.id AS subscriptionID, \
                                         t3.email, \
                                         t5.endYear, \
-                                        t2.id as prl_id \
+                                        t2.id as prl_id, \
+                                        t1.ctext \
                                       FROM \
                                         prl t1, \
                                         prl_details t2, \
@@ -1750,6 +1752,7 @@ get_pl_refer_list_for_email_and_all = SELECT \
                                         t6.subscriptionId = t4.id AND \
                                         t4.id = t5.subscriptionID AND \
                                         t1.year = YEAR(CURDATE()) AND \
+                                        t5.endYear = YEAR(CURDATE()) AND \
                                         t3.email LIKE ? \
                                       GROUP BY \
                                         subscriberID, \
@@ -1764,7 +1767,8 @@ get_pl_refer_list_for_print_only = SELECT \
                                         t4.id AS subscriptionID, \
                                         t3.email, \
                                         t5.endYear, \
-                                        t2.id as prl_id \
+                                        t2.id as prl_id, \
+                                        t1.ctext \
                                       FROM \
                                         prl t1, \
                                         prl_details t2, \
@@ -1779,6 +1783,7 @@ get_pl_refer_list_for_print_only = SELECT \
                                         t6.subscriptionId = t4.id AND \
                                         t4.id = t5.subscriptionID AND \
                                         t1.year = YEAR(CURDATE()) AND \
+                                        t5.endYear = YEAR(CURDATE()) AND \
                                         (t3.email = ? OR t3.email IS NULL) \
                                       GROUP BY \
                                         subscriberID, \
