prl list complete. Mail body text to be confirmed

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -1737,7 +1737,8 @@ get_pl_refer_list_for_email_and_all = SELECT \
                                         t3.email, \
                                         t5.endYear, \
                                         t2.id as prl_id, \
-                                        t1.ctext \
+                                        t1.ctext, \
+                                        t2.by_email \
                                       FROM \
                                         prl t1, \
                                         prl_details t2, \
@@ -1796,6 +1797,12 @@ get_prl_id_for_current_year = SELECT \
                                 prl \
                               WHERE \
                                 year = year(CURDATE())
+
+update_prl_email_status = UPDATE prl_details \
+                            SET by_email = TRUE \
+                          WHERE invoice_id = (SELECT id \
+                                                FROM invoice \
+                                               WHERE invoice.invoiceNumber = ?)
 
 get_email_ids = select email \
                 from subscriber, subscriber_type \
