--- a/web/WEB-INF/classes/email_templates.properties
+++ b/web/WEB-INF/classes/email_templates.properties
@@ -20,3 +20,8 @@ inward_request_for_invoice = Dear Subscriber,\n\n\
                              As per your request for Journal Prices, Please find the Invoice attached.\n\n\
                              Warm Regards,\n\
                              Indian Academy Of Sciences
+
+prl_invoice = Dear Subscriber,\n\n\
+                Please find attached the invoice for the next year.\n\n\
+                Warm Regards,\n\
+                Indian Academy Of Sciences
