subscriber enabled in inward pending invoice bill print/email jquery 1.8.3

--- a/trunk/web/WEB-INF/classes/email_templates.properties
+++ b/trunk/web/WEB-INF/classes/email_templates.properties
@@ -5,6 +5,7 @@ cheque_return_email_body =  Dear Subscriber,\n\n\
                             Please make alternative arrangements for re-payment to continue your subscription. \n\n\
                             Refer to the attached document for more details.\n\n\n\
                             Warm Regards,\n\
+                            The Circulation Department\n\
                             Indian Academy Of Sciences\
 
 
@@ -13,15 +14,25 @@ inward_ack_email_body = Dear Subscriber,\n\n\
                         drawn on %s Bank for Rs. %s. \n\n\
                         Refer to the attached document for more details.\n\n\n\
                         Warm Regards,\n\
+                        The Circulation Department\n\
                         Indian Academy Of Sciences
 
 
 inward_request_for_invoice = Dear Subscriber,\n\n\
                              As per your request for Journal Prices, Please find the Invoice attached.\n\n\
                              Warm Regards,\n\
+                             The Circulation Department\n\
                              Indian Academy Of Sciences
 
 prl_invoice = Dear Subscriber,\n\n\
-                Please find attached the invoice for the next year.\n\n\
+                As your subscription would be expiring this year, please find attached the invoice for the coming year.\n\n\
                 Warm Regards,\n\
+                The Circulation Department\n\
                 Indian Academy Of Sciences
+
+outstanding_payment = Dear Subscriber,\n\n\
+                        Our records indicate that you have an outstanding balance of Indian rupees %s. We have yet to receive this payment. Please find a copy of the invoice enclosed.\n \
+                        If this amount has already been paid and sent, please disregard this notice and we apologize for any inconvenience. Otherwise, please forward us the amount stated above.\n\n \
+                        Warm Regards,\n\
+                        The Circulation Department\n\
+                        Indian Academy Of Sciences
