--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -386,18 +386,31 @@ update_urn_info = update inward set chqDDNumber=?,amount=?, paymentDate=? where 
 
 # The where/and clause is formed dynamically in the searchInward in IAS.Model.inward.java
 search_inwards = select t1.id as inwardID, inwardNumber, t4.subscriberNumber as subscriberId, t1.from, DATE_FORMAT(inwardCreationDate,'%d/%m/%Y') as inwardCreationDate, t2.city as city, chqddNumber, t3.purpose as inwardPurpose, \
-                t1.inwardPurpose as inwardPurposeID from inward t1 \
+                t1.inwardPurpose as inwardPurposeID, t1.amount from inward t1 \
                 left join cities t2 on t1.city = t2.id \
                 left join inward_purpose t3 on t1.inwardPurpose = t3.id \
                 left join subscriber t4 on t1.subscriberId = t4.id \
                 where inwardNumber is not NULL
 
-search_subscriber_inward = select t1.id, inwardNumber, DATE_FORMAT(inwardCreationDate,'%d/%m/%Y') as inwardCreationDate, t1.amount, \
-                t3.purpose as inwardPurpose, t5.currency, DATE_FORMAT(ackDate,'%d/%m/%Y') as ackDate, t1.completed, t1.chequeDDReturn \
-                from inward t1 left join inward_purpose t3 on t1.inwardPurpose = t3.id \
-                left join subscriber t4 on t1.subscriberID = t4.id \
-                left join currency t5 on t1.currency = t5.id \
-                where t4.subscriberNumber = ? order by t1.id desc
+search_subscriber_inward = SELECT t1.id, \
+                                inwardNumber, \
+                                DATE_FORMAT(inwardCreationDate, '%d/%m/%Y') AS inwardCreationDate, \
+                                t1.amount, \
+                                t3.purpose AS inwardPurpose, \
+                                t5.currency, \
+                                DATE_FORMAT(ackDate, '%d/%m/%Y') AS ackDate, \
+                                t1.completed, \
+                                t1.chequeDDReturn, \
+                                t1.chqddNumber \
+                           FROM inward t1 \
+                                LEFT JOIN inward_purpose t3 \
+                                   ON t1.inwardPurpose = t3.id \
+                                LEFT JOIN subscriber t4 \
+                                   ON t1.subscriberID = t4.id \
+                                LEFT JOIN currency t5 \
+                                   ON t1.currency = t5.id \
+                          WHERE t4.subscriberNumber = ? \
+                         ORDER BY t1.id DESC
 
 
 search_inward_count = select count(*) from inward t1 \
@@ -406,7 +419,7 @@ search_inward_count = select count(*) from inward t1 \
                 left join subscriber t4 on t1.subscriberId = t4.id \
                 where inwardNumber is not NULL
 
-pending_inwards = select inwardNumber, t4.subscriberNumber as subscriberId, t14.agentName, t1.from, DATE_FORMAT(inwardCreationDate,'%d/%m/%Y') as inwardCreationDate, t2.city as city, chqddNumber, t3.purpose as inwardPurpose, \
+pending_inwards = select inwardNumber, t4.subscriberNumber as subscriberId, t14.agentName, t1.from, t1.amount, DATE_FORMAT(inwardCreationDate,'%d/%m/%Y') as inwardCreationDate, t2.city as city, chqddNumber, t3.purpose as inwardPurpose, \
                 t1.inwardPurpose as inwardPurposeID, t1.inwardCreationDate as sortdate from inward t1 \
                 left join cities t2 on t1.city = t2.id \
                 left join inward_purpose t3 on t1.inwardPurpose = t3.id \
@@ -583,13 +596,15 @@ get_subscription_for_subscriber =   select  t8.id, \
                                             (t8.balance - sum(COALESCE(t10.amount,0))) as balance, \
                                             t8.currency, \
                                             t8.legacy, \
-                                            t12.agentName \
+                                            t12.agentName, \
+                                            t8.chqddNumber \
                                             from \
                                             ( \
                                                 select  t5.id \
                                                 , t5.inwardID \
                                                 , t5.inwardNumber \
                                                 , DATE_FORMAT(t5.subscriptionDate,'%d/%m/%Y') as subscriptionDate \
+                                                , t5.chqddNumber \
                                                 , t5.amount \
                                                 , sum(copies * t7.rate) as subscriptionTotal \
                                                 , (sum(copies * t7.rate) - t5.amount) as balance \
@@ -600,6 +615,7 @@ get_subscription_for_subscriber =   select  t8.id, \
                                                             , t1.id \
                                                             , t1.inwardID \
                                                             , t2.inwardNumber \
+                                                            , t2.chqddNumber \
                                                             , t2.amount \
                                                             , t3.currency \
                                                             , t1.subscriptionDate \
@@ -1105,7 +1121,7 @@ list_reminders_subscriber =  select subscription.id as subId, subscriber_type.su
 #--------------------------------------------------------------------------
 get_last_invoice = SELECT invoiceNumber FROM invoice where YEAR(invoiceCreationDate)=YEAR(CURDATE()) ORDER BY id DESC LIMIT 1
 
-invoice_insert = insert into invoice ( invoiceNumber, subscriptionID, invoiceCreationDate ) values ( ?, ?, ? )
+invoice_insert = insert into invoice ( invoiceNumber, subscriptionID, invoiceCreationDate, invoice_type_id ) values ( ?, ?, ?, ? )
 
 get_invoice_detail = SELECT \
                         t1.id AS inwardID, \
@@ -1127,7 +1143,9 @@ get_invoice_detail = SELECT \
                           t4.invoiceCreationDate, \
                           '%d/%m/%Y') \
                           AS invoiceCreationDate, \
-                        sum(t6.rate * t5.copies) AS subscriptionTotal \
+                        sum(t6.rate * t5.copies) AS subscriptionTotal, \
+                        (sum(t6.rate * t5.copies) - t1.amount) as balance, \
+                        t1.amount \
                       FROM \
                         inward t1, \
                         subscription t2, \
@@ -1151,16 +1169,23 @@ get_invoice_detail = SELECT \
 search_subscriber_invoice = select  t5.invoiceNumber, \
                                     DATE_FORMAT(t5.invoiceCreationDate,'%d/%m/%Y') as invoiceCreationDate, \
                                     t2.id as subscriptionID, \
-                                    sum(t3.copies * t4.rate) as invoiceAmount \
+                                    sum(t3.copies * t4.rate) as invoiceAmount, \
+                                    t6.invoice_type, \
+                                    t5.invoice_type_id, \
+                                    (sum(t3.copies * t4.rate) - t7.amount) as balance \
                             from  subscriber t1, \
                                 subscription t2, \
                                 subscriptiondetails t3, \
                                 subscription_rates t4, \
-                                invoice t5 \
+                                invoice t5, \
+                                invoice_types t6, \
+                                inward t7 \
                             where t1.id=t2.subscriberID \
                                 and t3.subscriptionID=t2.id \
                                 and t3.journalPriceGroupID=t4.id \
                                 and t2.id=t5.subscriptionId \
+                                and t5.invoice_type_id = t6.id \
+                                and t2.inwardid=t7.id \
                                 and t1.subscriberNumber=? \
                             group by t5.invoiceNumber, t5.invoiceCreationDate,t2.id \
                             order by subscriptionID desc \
@@ -1174,13 +1199,17 @@ get_invoice_detail_usng_invno =  Select  t5.id, \
                                  t1.invoiceAddress, \
                                  t1.subscriberName, \
                                  t1.subscriberNumber, \
+                                 t1.email, \
                                  t5.invoiceNumber, \
                                  t1.department, \
                                  t1.institution, \
                                  t1.pincode, \
                                  t7.city, \
                                  t8.country, \
-                                 sum(t3.copies * t4.rate) as subscriptionTotal \
+                                 sum(t3.copies * t4.rate) as subscriptionTotal, \
+                                 t5.invoice_type_id as invoiceTypeID, \
+                                 t6.amount, \
+                                 (sum(t3.copies * t4.rate) - t6.amount) as balance \
                                         from  subscriber t1, \
                                               subscription t2, \
                                               subscriptiondetails t3, \
@@ -1220,6 +1249,7 @@ get_invoice_detail_for_prl = SELECT \
                                 t3.journalGroupID = t5.journalGroupId AND \
                                 t5.journalId = t4.id AND \
                                 t2.subscriberID = t6.id AND \
+                                t1.invoice_type_id = 3 AND \
                                 t1.invoiceNumber = ? \
                               GROUP BY \
                                 t6.subscriberNumber
