--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -386,7 +386,7 @@ update_urn_info = update inward set chqDDNumber=?,amount=?, paymentDate=? where 
 
 # The where/and clause is formed dynamically in the searchInward in IAS.Model.inward.java
 search_inwards = select t1.id as inwardID, inwardNumber, t4.subscriberNumber as subscriberId, t1.from, DATE_FORMAT(inwardCreationDate,'%d/%m/%Y') as inwardCreationDate, t2.city as city, chqddNumber, t3.purpose as inwardPurpose, \
-                t1.inwardPurpose as inwardPurposeID, t1.amount from inward t1 \
+                t1.inwardPurpose as inwardPurposeID, t1.amount, t1.completed from inward t1 \
                 left join cities t2 on t1.city = t2.id \
                 left join inward_purpose t3 on t1.inwardPurpose = t3.id \
                 left join subscriber t4 on t1.subscriberId = t4.id \
