Fixes issue 217 Hardcoded subscribertypeid is now removed

--- a/JDSMigration/log4j.properties
+++ b/JDSMigration/log4j.properties
@@ -10,9 +10,9 @@ log4j.rootLogger=FATAL, stdout, migration
 
 log4j.logger.JDSMigration.OldInward=FATAL
 log4j.logger.JDSMigration.Inward=FATAL
-log4j.logger.JDSMigration.Temp=DEBUG
-log4j.logger.JDSMigration.IndTemp=DEBUG
-log4j.logger.JDSMigration.Subscriber=DEBUG
+log4j.logger.JDSMigration.Temp=FATAL
+log4j.logger.JDSMigration.IndTemp=FATAL
+log4j.logger.JDSMigration.Subscriber=FATAL
 log4j.logger.JDSMigration.Subscription=FATAL
 log4j.logger.JDSMigration.Corr=FATAL
 log4j.logger.JDSMigration.CurrMem=FATAL
@@ -28,7 +28,7 @@ log4j.logger.JDSMigration.migrateExchange=FATAL
 log4j.logger.JDSMigration.migrateFellows=FATAL
 log4j.logger.JDSMigration.migrateHONFEL=FATAL
 log4j.logger.JDSMigration.migrateJGRANT=FATAL
-log4j.logger.JDSMigration.migrateRES=DEBUG
+log4j.logger.JDSMigration.migrateRES=FATAL
 log4j.logger.JDSMigration.migrateCURR=FATAL
 log4j.logger.JDSMigration.MigrationBase.getCityID=DEBUG, cities
 
