--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -515,6 +515,7 @@ get_subscriber_by_number = select t1.id as subscriberID \
                       ,t7.agentName \
                       ,t1.deactive \
                       ,DATE_FORMAT(t1.deactivationDate,'%d/%m/%Y') as deactivationDate \
+                      ,t6.subtypecode \
                 from subscriber t1 \
                 left join cities t2 on t1.city = t2.id \
                 left join districts t3 on t1.district = t3.id \
@@ -760,14 +761,19 @@ get_subscription_details_prl =  SELECT \
                                 t3.period, \
                                 t3.rate, \
                                 t1.startMonth, \
-                                t1.journalGroupID \
+                                t1.journalGroupID, \
+                                t5.subtype \
                               FROM \
                                 subscriptiondetails t1, \
                                 journal_groups t2, \
-                                subscription_rates t3 \
+                                subscription_rates t3, \
+                                subscription t4, \
+                                subscriber t5 \
                               WHERE \
                                 t1.journalGroupID = t2.id AND \
                                 t1.journalPriceGroupID = t3.id AND \
+                                t1.subscriptionID = t4.id AND \
+                                t4.subscriberID = t5.id AND \
                                 t1.subscriptionID = ? AND \
                                 t1.endYear = ?
 
@@ -1121,7 +1127,16 @@ list_reminders_subscriber =  select subscription.id as subId, subscriber_type.su
 #--------------------------------------------------------------------------
 get_last_invoice = SELECT invoiceNumber FROM invoice where YEAR(invoiceCreationDate)=YEAR(CURDATE()) ORDER BY id DESC LIMIT 1
 
-invoice_insert = insert into invoice ( invoiceNumber, subscriptionID, invoiceCreationDate, invoice_type_id ) values ( ?, ?, ?, ? )
+invoice_insert = INSERT INTO invoice(invoiceNumber, \
+                    subscriptionID, \
+                    invoiceCreationDate, \
+                    invoice_type_id, \
+                    amount) \
+                VALUES (?, \
+                        ?, \
+                        ?, \
+                        ?, \
+                        ?)
 
 get_invoice_detail = SELECT \
                         t1.id AS inwardID, \
@@ -1145,7 +1160,8 @@ get_invoice_detail = SELECT \
                           AS invoiceCreationDate, \
                         sum(t6.rate * t5.copies) AS subscriptionTotal, \
                         (sum(t6.rate * t5.copies) - t1.amount) as balance, \
-                        t1.amount \
+                        t1.amount as inwardAmount, \
+                        t4.amount \
                       FROM \
                         inward t1, \
                         subscription t2, \
@@ -1169,7 +1185,7 @@ get_invoice_detail = SELECT \
 search_subscriber_invoice = select  t5.invoiceNumber, \
                                     DATE_FORMAT(t5.invoiceCreationDate,'%d/%m/%Y') as invoiceCreationDate, \
                                     t2.id as subscriptionID, \
-                                    sum(t3.copies * t4.rate) as invoiceAmount, \
+                                    t5.amount as invoiceAmount, \
                                     t6.invoice_type, \
                                     t5.invoice_type_id, \
                                     (sum(t3.copies * t4.rate) - t7.amount) as balance \
@@ -1208,7 +1224,8 @@ get_invoice_detail_usng_invno =  Select  t5.id, \
                                  t8.country, \
                                  sum(t3.copies * t4.rate) as subscriptionTotal, \
                                  t5.invoice_type_id as invoiceTypeID, \
-                                 t6.amount, \
+                                 t6.amount as inwardAmount, \
+                                 t5.amount, \
                                  (sum(t3.copies * t4.rate) - t6.amount) as balance \
                                         from  subscriber t1, \
                                               subscription t2, \
@@ -1235,7 +1252,8 @@ get_invoice_detail_for_prl = SELECT \
                                 t6.invoiceAddress, \
                                 t6.shippingAddress, \
                                 t6.subtype as subscriberType, \
-                                t6.email \
+                                t6.email, \
+                                t1.amount \
                               FROM \
                                 invoice t1, \
                                 subscription t2, \
@@ -1768,7 +1786,8 @@ get_pl_refer_list_for_email_and_all = SELECT \
                                         t5.endYear, \
                                         t2.id as prl_id, \
                                         t1.ctext, \
-                                        t2.by_email \
+                                        t2.by_email, \
+                                        t6.amount \
                                       FROM \
                                         prl t1, \
                                         prl_details t2, \
@@ -1799,7 +1818,8 @@ get_pl_refer_list_for_print_only = SELECT \
                                         t3.email, \
                                         t5.endYear, \
                                         t2.id as prl_id, \
-                                        t1.ctext \
+                                        t1.ctext, \
+                                        t6.amount \
                                       FROM \
                                         prl t1, \
                                         prl_details t2, \
