adding payment info for every invoice in the subscriber details view.

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -1920,3 +1920,14 @@ insert_payment = INSERT INTO payment(inwardID, \
                             ?, \
                             ?, \
                             ?)
+
+invoice_payments =   SELECT t1.id, \
+                            t2.inwardNumber, \
+                            t2.amount AS inwardAmount, \
+                            t1.amount AS paymentAmount, \
+                            t1.remarks, \
+                            DATE_FORMAT(t1.`date`,'%d/%m/%Y') AS paymentDate, \
+                            t1.invoice_id \
+                       FROM payment t1, inward t2 \
+                      WHERE t1.invoice_id = ? AND t1.inwardID = t2.id \
+                     GROUP BY t1.id
