Update issue 210 Added 2 new tables. 1 table holds year specific information. Another holds volume numbers. Added the 2 new screens to capture this information and modified the existing screen which was used to capture this information. Main change is with respect to the no of issues per year being moved to journal_details table from the journal table. Changes are partially complete. The back issue list screen modification is still pending.

--- a/trunk/web/WEB-INF/web.xml
+++ b/trunk/web/WEB-INF/web.xml
@@ -220,6 +220,10 @@
         <servlet-name>payment</servlet-name>
         <servlet-class>IAS.Controller.payment</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>journalDetails</servlet-name>
+        <servlet-class>IAS.Controller.masterdata.journalDetails</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>main</servlet-name>
         <url-pattern>/main</url-pattern>
@@ -393,6 +397,10 @@
     <servlet-mapping>
         <servlet-name>payment</servlet-name>
         <url-pattern>/payment</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>journalDetails</servlet-name>
+        <url-pattern>/journalDetails</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>30</session-timeout>
