Update issue 210 Added 2 new tables. 1 table holds year specific information. Another holds volume numbers. Added the 2 new screens to capture this information and modified the existing screen which was used to capture this information. Main change is with respect to the no of issues per year being moved to journal_details table from the journal table. Changes are partially complete. The back issue list screen modification is still pending.

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -112,15 +112,15 @@ journal_name = select journalName from journals
 
 journalName = select journalName from journals
 
-journal_insert = insert into journals(journalCode,journalName,issnNo,pages,startYear,issues) values(?,?,?,?,?,?)
+journal_insert = insert into journals(journalCode,journalName,issnNo,startYear) values(?,?,?,?)
 
-update_journal = update journals set journalCode = ?, journalName = ?, issnNo = ?, pages = ?, startYear = ?, issues = ? where id = ?
+update_journal = update journals set journalCode = ?, journalName = ?, issnNo = ?, startYear = ? where id = ?
 
-get_journal_by_name = select id, journalCode, journalName, issnNo, pages, startYear, issues from journals where journalCode = ? and journalName = ? and issnNo = ? and pages = ? and startYear = ? and issues = ?
+get_journal_by_name = select id, journalCode, journalName, issnNo, startYear from journals where journalCode = ? and journalName = ? and issnNo = ? and startYear = ?
 
-get_journal_by_id = select id, journalCode, journalName, issnNo, pages, startYear, issues from journals where id = ?
+get_journal_by_id = select id, journalCode, journalName, issnNo, startYear from journals where id = ?
 
-search_journal = select id, journalCode, journalName, issnNo, pages, startYear, issues from journals where journalCode like ? or journalName like ?
+search_journal = select id, journalCode, journalName, issnNo, startYear from journals where journalCode like ? or journalName like ?
 
 ! End Journal----------------------------------------------------
 
@@ -222,7 +222,8 @@ get_print_order_by_year = select t1.id, t2.journalCode, t2.journalName, \
                             t1.julyPrintOrder, t1.augPrintOrder, t1.septPrintOrder, t1.octPrintOrder, t1.novPrintOrder, t1.decPrintOrder , t1.annualPrintOrder \
                             from journals t2 left join print_order t1 on t2.id = t1.journalId and t1.`year`=?
 
-getNoOfIssues = select issues from journals where journalName = ?
+!getNoOfIssues = select issues from journals where journalName = ?
+getNoOfIssues = select issues from journal_details where journals_id = (select id from journals where journals.journalName = ? ) and year =?
 
 !update_printOrder = update print_order set printOrder = ? where year = ? and journalId = (select id from journals where journalCode = ?)
 
@@ -232,7 +233,7 @@ getNoOfIssues = select issues from journals where journalName = ?
 
 update_printOrder = update print_order set printOrder = ? where id = ?
 
-add_new_print_order = select id, journalCode, journalName, issues from journals
+!add_new_print_order = select id, journalCode, journalName, issues from journals
 
 !get_printOrder = select printOrder from print_order where `year` = ? and journalId = ? and issueNo = ?
 get_printOrder = select printOrder from print_order where `year` = ? and journalId = (select id from journals where journalName = ?) and issueNo = ?
@@ -876,10 +877,10 @@ search_inward = select inwardNumber, t4.subscriberNumber as subscriberId, t1.fro
 
 !List Journal ---------------------------------------------
 
-list_journal_all = select id, journalCode, journalName, issnNo, pages, startYear, issues from journals
+!list_journal_all = select id, journalCode, journalName, issnNo, pages, startYear, issues from journals
 
-list_journal_group = select  t1.id, t1.journalCode, t1.journalName, t1.issnNo, t1.pages, t1.startYear, \
-                     t1.issues from journals t1, journal_groups t2, journal_group_contents t3 where t1.id = \
+list_journal_group = select  t1.id, t1.journalCode, t1.journalName, t1.issnNo, t1.startYear \
+                     from journals t1, journal_groups t2, journal_group_contents t3 where t1.id = \
                       t3.journalid and t2.id = t3.journalGroupId and
 !End List Journals ---------------------------------------------
 
@@ -1054,11 +1055,13 @@ subscription_Figures = SELECT count(subscriber.subscriberNumber), sum(subscripti
                             GROUP BY journals.journalCode AND subscriber_type.subtypecode
 
 ! End Subscription figures
-get_max_no_of_issues = select max(issues) FROM journals
+!get_max_no_of_issues = select max(issues) FROM journals
+get_max_no_of_issues = select max(issues) FROM journal_details where journal_details.`year` = ?
 
 get_list_of_journals = select journalCode FROM journals;
 
-get_no_of_issues = select issues from journals where journalCode = ?
+!get_no_of_issues = select issues from journals where journalCode = ?
+get_no_of_issues = select issues from journal_details where journal_details.journals_id = (select id from journals where journals.journalCode = ?) and journal_details.`year`=?
 
 get_print_order = select printOrder from print_order where `year`=? and journalId=(select id from journals where journals.journalCode=?) and issueNo=?
 
@@ -1931,3 +1934,16 @@ invoice_payments =   SELECT t1.id, \
                        FROM payment t1, inward t2 \
                       WHERE t1.invoice_id = ? AND t1.inwardID = t2.id \
                      GROUP BY t1.id
+
+
+getJournalName = select journalName from journals
+get_journal_details = select pages, issues, page_size, no_of_volumes from journal_details where journals_id = (select journals.id from journals where journals.journalName = ?) and journal_details.`year` = ?
+check_if_journal_details_exist = select id from journal_details where journals_id = (select id from journals where journals.journalName = ?) and `year` = ?
+update_journal_details = update journal_details set pages = ?, issues = ?, page_size = ?, no_of_volumes = ? where id = ?
+insert_journal_details = insert into journal_details (journals_id, year, pages, issues, page_size, no_of_volumes ) values ((select id from journals where journalName = ?),?,?,?,?,?)
+get_months = select month from months
+get_journal_volume_details = select id, volume_number, start_month from journal_volume_details where journal_details_id = ?
+get_journal_details_id = select id, no_of_volumes from journal_details where journals_id = (select id from journals where journals.journalName = ?) and `year` = ?
+get_journal_volume_details_id = select id from journal_volume_details where journal_details_id = (select id from journal_details where journal_details.`year`=? and journal_details.journals_id = (select id from journals where journals.journalName = ?))
+insert_journal_volume_details = insert into journal_volume_details (journal_details_id, volume_number, start_month) values ((select id from journal_details where journals_id = (select id from journals where journalName = ?) and journal_details.`year` = ?),?,?)
+update_journal_volume_details = update journal_volume_details set volume_number = ?, start_month = ? where id = ?
