--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -220,6 +220,10 @@
         <servlet-name>payment</servlet-name>
         <servlet-class>IAS.Controller.payment</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>journalDetails</servlet-name>
+        <servlet-class>IAS.Controller.masterdata.journalDetails</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>main</servlet-name>
         <url-pattern>/main</url-pattern>
@@ -393,6 +397,10 @@
     <servlet-mapping>
         <servlet-name>payment</servlet-name>
         <url-pattern>/payment</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>journalDetails</servlet-name>
+        <url-pattern>/journalDetails</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>30</session-timeout>
