alter unique inward index in payment table add subgrid for subscription tab add receipt number in subscription tab

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -603,7 +603,8 @@ get_subscription_for_subscriber =   SELECT t10.id, \
                                             t10.chqddNumber, \
                                             t10.amount AS inwardAmount, \
                                             sum(COALESCE(t12.amount, 0)) as payment, \
-                                            (t10.amount + sum(COALESCE(t12.amount, 0))) AS amountPaid \
+                                            (t10.amount + sum(COALESCE(t12.amount, 0))) AS amountPaid, \
+                                            t10.receiptNumber \
                                        FROM          (SELECT t1.id, \
                                                              t4.id AS inwardID, \
                                                              t4.inwardNumber, \
@@ -613,7 +614,8 @@ get_subscription_for_subscriber =   SELECT t10.id, \
                                                              t1.legacy, \
                                                              t6.currency, \
                                                              t4.chqddNumber, \
-                                                             t4.amount \
+                                                             t4.amount, \
+                                                             t4.receiptNumber \
                                                         FROM subscription t1, \
                                                              subscriptiondetails t2, \
                                                              subscriber t3, \
