--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -1950,6 +1950,17 @@ invoice_payments =   SELECT t1.id, \
                       WHERE t1.invoice_id = ? AND t1.inwardID = t2.id \
                      GROUP BY t1.id
 
+get_payments_for_subscription = SELECT t1.invoiceNumber, \
+                                        t1.amount AS invoiceAmount, \
+                                        t4.inwardNumber, \
+                                        t4.amount AS inwardAmount, \
+                                        t3.amount AS paymentAmount, \
+                                        DATE_FORMAT(t3.`date`, '%d/%m/%Y') AS paymentDate, \
+                                        t3.remarks \
+                                   FROM invoice t1, payment t3, inward t4 \
+                                  WHERE     t3.invoice_id = t1.id \
+                                        AND t3.inwardID = t4.id \
+                                        AND t1.subscriptionid = ?
 
 getJournalName = select journalName from journals
 get_journal_details = select pages, issues, page_size, no_of_volumes from journal_details where journals_id = (select journals.id from journals where journals.journalName = ?) and journal_details.`year` = ?
@@ -1962,3 +1973,4 @@ get_journal_details_id = select id, no_of_volumes from journal_details where jou
 get_journal_volume_details_id = select id from journal_volume_details where journal_details_id = (select id from journal_details where journal_details.`year`=? and journal_details.journals_id = (select id from journals where journals.journalName = ?))
 insert_journal_volume_details = insert into journal_volume_details (journal_details_id, volume_number, start_month) values ((select id from journal_details where journals_id = (select id from journals where journalName = ?) and journal_details.`year` = ?),?,?)
 update_journal_volume_details = update journal_volume_details set volume_number = ?, start_month = ? where id = ?
+
